# comco-editor

./: .gitignore  CMakeLists.txt  build.sh  imgui.ini
src/: main.cpp
src/core/: AnimationNode.h  Application.cpp  Application.h  Component.h  Entity.cpp  Entity.h  Filesystem.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  Panel.h
src/ui/Panels/: Animator.cpp  Animator.h  EntityInspector.cpp  EntityInspector.h  EntityList.cpp  EntityList.h  FileExplorer.cpp  FileExplorer.h
src/utils/: UUID.cpp  UUID.h
